feat: tela de cadastro de usuário

--- a/www/lista-web/src/app/login/login.component.html
+++ b/www/lista-web/src/app/login/login.component.html
@@ -12,6 +12,6 @@
   </form>
   <div class="botao-container">
     <button class="botao" (click)="onEntrar()">Entrar</button>
-    <button class="botao">registrar</button>
+    <button class="botao" (click)="onRegistrar()">registrar</button>
   </div>
 </div>
